<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/e_white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hallo"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/e_black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_desc"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:ems="10"
            android:background="@drawable/border_input"
            android:inputType="text"
            android:hint="@string/fullname"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/signup_username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:ems="10"
            android:background="@drawable/border_input"
            android:inputType="text"
            android:hint="@string/username"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:ems="10"
            android:background="@drawable/border_input"
            android:inputType="text"
            android:hint="@string/email"
            android:layout_marginBottom="10dp"
            tools:ignore="TextFields" />
        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:ems="10"
            android:background="@drawable/border_input"
            android:inputType="textPassword"
            android:hint="@string/hit_password"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/signup_repassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:ems="10"
            android:background="@drawable/border_input"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/e_white"
            android:background="@drawable/btn_signup"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sudah_memiliki_akun"
                    android:paddingRight="2dp"/>

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/e_purple"
                    android:textStyle="bold"
                    android:text="@string/sign_in"/>
            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>