<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/e_black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_welcome"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:ems="10"
            android:background="@drawable/border_input"
            android:inputType="text"
            android:hint="@string/hit_username"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:ems="10"
            android:background="@drawable/border_input"
            android:inputType="textPassword"
            android:hint="@string/hit_password"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/e_white"
            android:background="@drawable/btn_signin"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tidak_memiliki_akun"
                    android:paddingRight="2dp"/>

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/e_purple"
                    android:textStyle="bold"
                    android:text="@string/sign_up_sekarang"/>
            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>